--- a/XRecyclerview/src/main/res/values/strings.xml
+++ b/XRecyclerview/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">XRecyclerview</string>
+    <string name="pull_refresh">下拉刷新</string>
+    <string name="ready_refresh">松开刷新</string>
+    <string name="in_refresh">正在刷新</string>
 </resources>
